--- a/app/views/backend/affairs/_show.html.haml
+++ b/app/views/backend/affairs/_show.html.haml
@@ -1,23 +1,40 @@
-.affair
-  %table.deals
+.affair.active-list
+  %table.list.deals
+    %thead
+      %tr
+        %th= Gap.human_attribute_name(:done_on)
+        %th= Gap.human_attribute_name(:deal_type)
+        %th= Gap.human_attribute_name(:third)
+        %th= Gap.human_attribute_name(:reference)
+        %th= Gap.human_attribute_name(:amount)
+        %th.act
     %tfoot
       %tr
-        %td
-        %td{:colspan => 2}
+        %td{:colspan => 3}
           - unless affair.closed?
+            %strong.action-intro= :attach_deal.tl
             - third_id = (affair.deals.first ? affair.deals.first.deal_third.id : nil)
+
             %span.btn-group<
-              - for model in Affair::AFFAIRABLE_MODELS
+              - for model in (Affair::AFFAIRABLE_MODELS - %w(gap transfer))
                 = link_to({:action => :select, :controller => :affairs, :id => affair.id, :deal_type => model, :third_id => third_id, :redirect => request.path}, :class => "btn btn-link") do
                   %i
                   = "activerecord.models.#{model}".t
-        %th.total= :balance.tl
+        %td.total
+          - if affair.closed?
+            = :balance.tl
+          - else
+            - unless affair.balance.zero?
+              %span.btn-group<
+                = link_to({controller: :affairs, action: :finish, id: affair.id, redirect: request.path}, method: :post, class: "btn btn-check primary") do
+                  %i
+                  = "convert_balance_into.#{affair.losing? ? :loss : :profit}".tl
         %td.total.amount.sum{:class => (affair.balance == 0 ? "debit" : "credit")}= affair.balance.l(:currency => affair.currency)
-        %td
+        %td.act
     %tbody
       - for deal in affair.deals
         %tr
-          %td.dealt-on= deal.dealt_on.l
+          %td.dat.dealt-on= deal.dealt_on.l
           %td.type= deal.class.model_name.human
           %td.third= link_to(deal.deal_third.full_name, send("backend_#{deal.deal_third.class.name.underscore}_path", deal.deal_third))
           %td.name= link_to(deal.label, :controller => "backend/"+deal.class.table_name, :action => :show, :id => deal.id)
