--- a/app/views/backend/affairs/_show.html.haml
+++ b/app/views/backend/affairs/_show.html.haml
@@ -43,6 +43,7 @@
               %span.sign= deal.deal_debit? ? "+" : "-"
             %span.value= deal.amount.l(:currency => deal.currency)
           %td.act
-            = link_to({:action => :detach, :controller => :affairs, :deal_type => deal.class.name.underscore, :deal_id => deal.id, :redirect => request.url}, :method => :delete, 'data-confirm' => :are_you_sure.tl, :class => "remove") do
-              %i
-              = :destroy.tl
+            - if deal != current_deal and deal.detachable?
+              = link_to({:action => :detach, :controller => :affairs, :deal_type => deal.class.name.underscore, :deal_id => deal.id, :redirect => request.url}, :method => :delete, 'data-confirm' => :are_you_sure.tl, :class => "remove") do
+                %i
+                = :destroy.tl
