Add mail method in contact

--- a/app/views/subscriptions/_form.html.haml
+++ b/app/views/subscriptions/_form.html.haml
@@ -5,6 +5,6 @@
   -f.field :subscription, :quantity
   -#f.field :subscription, :entity_id, :choices=>:entities
   -#f.field :subscription, :sale_id
-  -#f.field :subscription, :suspended
+  -f.field :subscription, :suspended
 =render :partial=>"coordinates_form"
 
