--- a/app/views/backend/affairs/_show.html.haml
+++ b/app/views/backend/affairs/_show.html.haml
@@ -37,11 +37,11 @@
           %td.dat.dealt-on= deal.dealt_on.l
           %td.type= deal.class.model_name.human
           %td.third= link_to(deal.deal_third.full_name, send("backend_#{deal.deal_third.class.name.underscore}_path", deal.deal_third))
-          %td.name= link_to(deal.label, :controller => "backend/"+deal.class.table_name, :action => :show, :id => deal.id)
-          %td.amount{:class => (deal.deal_debit? ? "debit" : "credit")}
-            - unless deal.amount.zero?
+          %td.name= link_to(deal.label, :controller => "/backend/"+deal.class.table_name, :action => :show, :id => deal.id)
+          %td.amount{:class => (deal.good_deal? ? "debit" : "credit")}
+            - unless deal.deal_amount.zero?
               %span.sign= deal.deal_debit? ? "+" : "-"
-            %span.value= deal.amount.l(:currency => deal.currency)
+            %span.value= deal.deal_amount.l(currency: deal.currency)
           %td.act
             - if deal != current_deal and deal.detachable?
               = link_to({:action => :detach, :controller => :affairs, :deal_type => deal.class.name.underscore, :deal_id => deal.id, :redirect => request.url}, :method => :delete, 'data-confirm' => :are_you_sure.tl, :class => "remove") do
