--- a/app/views/backend/gaps/show.html.haml
+++ b/app/views/backend/gaps/show.html.haml
@@ -4,6 +4,12 @@
 = beehive do |b|
   - b.cell do
     = attributes_list do |l|
-      - l.attribute :entity
+      - l.attribute :entity, url: true
       - l.attribute :direction
+      - l.attribute :entity_role
       - l.attribute :amount, currency: true
+      - l.attribute :affair, url: true
+      - l.attribute :journal_entry, url: true
+
+  - b.cell :items do
+    = list :items
