--- a/app/views/backend/sales/_form.html.haml
+++ b/app/views/backend/sales/_form.html.haml
@@ -21,26 +21,27 @@
 
   - b.cell :items do
     -#=f.nested_association(:items)
-    %table
-      %thead
-        %tr
-          %th= SaleItem.human_attribute_name(:variant)
-          %th= SaleItem.human_attribute_name(:quantity)
-          -#%th= SaleItem.human_attribute_name(:indicator)
-          %th= SaleItem.human_attribute_name(:price) # Custom price
-          %th= SaleItem.human_attribute_name(:tax) # Custom price
-          %th= SaleItem.human_attribute_name(:pretax_amount)
-          %th= SaleItem.human_attribute_name(:amount)
-          %th= SaleItem.human_attribute_name(:currency)
-          %th
-      %tbody#items
-        = f.simple_fields_for :items, @sale.items do |item|
-          = render 'item_fields', :f => item
-      %tfoot
-        %tr.total
-          %td= link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
-          %th{:colspan => 3}= "total".tl
-          %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}= @sale.pretax_amount
-          %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}= @sale.amount
-          %td= @sale.currency
-          %th
+    .items
+      %table
+        %thead
+          %tr
+            %th= SaleItem.human_attribute_name(:variant)
+            %th= SaleItem.human_attribute_name(:quantity)
+            -#%th= SaleItem.human_attribute_name(:indicator)
+            %th= SaleItem.human_attribute_name(:price) # Custom price
+            %th= SaleItem.human_attribute_name(:tax) # Custom price
+            %th= SaleItem.human_attribute_name(:pretax_amount)
+            %th= SaleItem.human_attribute_name(:amount)
+            %th= SaleItem.human_attribute_name(:currency)
+            %th
+        %tbody#items
+          = f.simple_fields_for :items, @sale.items do |item|
+            = render 'item_fields', :f => item
+        %tfoot
+          %tr.total
+            %th= link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
+            %th{:colspan => 3}= "total".tl
+            %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}= @sale.pretax_amount
+            %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}= @sale.amount
+            %td= @sale.currency
+            %th
