--- a/app/views/backend/affairs/_show.html.haml
+++ b/app/views/backend/affairs/_show.html.haml
@@ -32,13 +32,13 @@
         %td.total.amount.sum{:class => (affair.balance == 0 ? "debit" : "credit")}= affair.balance.l(:currency => affair.currency)
         %td.act
     %tbody
-      - for deal in affair.deals
+      - for deal in affair.deals.sort{|a,b| a.dealt_on <=> b.dealt_on and a.created_at <=> b.created_at }
         %tr
           %td.dat.dealt-on= deal.dealt_on.l
           %td.type= deal.class.model_name.human
           %td.third= link_to(deal.deal_third.full_name, send("backend_#{deal.deal_third.class.name.underscore}_path", deal.deal_third))
           %td.name= link_to(deal.label, :controller => "/backend/"+deal.class.table_name, :action => :show, :id => deal.id)
-          %td.amount{:class => (deal.good_deal? ? "debit" : "credit")}
+          %td.amount{:class => (deal.deal_debit? ? "debit" : "credit")}
             - unless deal.deal_amount.zero?
               %span.sign= deal.deal_debit? ? "+" : "-"
             %span.value= deal.deal_amount.l(currency: deal.currency)
