Reviews guides and adds analyses history which is quite necessary for tracking

--- a/app/views/backend/guides/show.html.haml
+++ b/app/views/backend/guides/show.html.haml
@@ -3,5 +3,11 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@guide) do |l|
+    = attributes_list do |l|
       - l.attribute :name
+      - l.attribute :active
+      - l.attribute :nature
+      - l.attribute :external
+
+  - b.cell :analyses do
+    = list :analyses
