--- a/lib/generators/backend_scaffold/templates/show.html.haml
+++ b/lib/generators/backend_scaffold/templates/show.html.haml
@@ -3,5 +3,5 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@<%= singular_table_name %>) do |l|
+    = attributes_list do |l|
       - l.attribute :name
