--- a/app/views/backend/sale_items/_form.html.haml
+++ b/app/views/backend/sale_items/_form.html.haml
@@ -1,5 +1,5 @@
 -# TODO: Manage extra content in form
-= sale_steps unless request.xhr?
+= sale_steps(f.object.sale) unless request.xhr?
 
 -#=field_set @sale_item do
 -#  =f.referenced_association :sale, :field => :hidden
