Writes skel for nitrogen inputs calculation

--- a/app/views/backend/calculators/nitrogen_inputs/_form.html.haml
+++ b/app/views/backend/calculators/nitrogen_inputs/_form.html.haml
@@ -1,3 +1,4 @@
+= hidden_field_tag(:campaign_id, @campaign.id)
 .active-list
   %table.list
     %thead
@@ -11,21 +12,19 @@
       %th= ProductionSupport.human_attribute_name(:soil_nature)
       %th= ProductionSupport.human_attribute_name(:nitrogen_input)
     %tbody
-      - for support in @campaign.production_supports
-        - zone = support.storage
-        - next unless zone.is_a?(CultivableZone)
-        - for membership in zone.memberships
-          - land_parcel = membership.member
-          %tr
-            %td= support.activity.name
-            %td= support.campaign.name
-            %td= land_parcel.name
-            %td.dec= membership.net_surface_area.in(:hectare).round(3).l
-            %td= Nomen::Varieties[support.production.variant.variety].human_name
-            %td= select_tag(:method, options_for_select(Nomen::NmpMethods.selection))
-            %td
-              %span.input-append
-                = text_field_tag(:yield, 90, size: 4)
-                %span.add-on= Nomen::Units[:quintal_per_hectare].symbol
-            %td= select_tag(:variety, options_for_select(Nomen::Varieties.selection(:land_parcel), land_parcel.variety))
-            %td.dec= 0.0.in(:unity_per_hectare).l
+      - for zone in @nitrogenous_zones
+        %tr
+          %td= zone.activity.name
+          %td= zone.campaign.name
+          %td= zone.land_parcel.name
+          %td.dec= zone.net_surface_area.in(:hectare).round(3).l
+          %td= zone.cultivation_variety.human_name
+          %td= select_tag("nitrogenous_zones[#{zone.id}][inputs_method]", options_for_select(Nomen::NmpMethods.selection, zone.inputs_method))
+          %td
+            %span.input-append
+              - y = zone.crop_yield
+              = hidden_field_tag("nitrogenous_zones[#{zone.id}][crop_yield][unit]", y.unit)
+              = text_field_tag("nitrogenous_zones[#{zone.id}][crop_yield][value]", y.to_d, size: 4)
+              %span.add-on= y.symbol
+          %td= select_tag("nitrogenous_zones[#{zone.id}][soil_variety]", options_for_select(Nomen::Varieties.selection(:land_parcel), zone.soil_variety.name))
+          %td.dec= zone.nitrogen_inputs.in(:unity_per_hectare).l
