--- a/app/views/backend/users/_form.html.haml
+++ b/app/views/backend/users/_form.html.haml
@@ -1,8 +1,8 @@
 = field_set do
   = f.input :last_name
   = f.input :first_name
-  = f.input :language, :choices => :languages
-  -# =f.input :user_name
+  = f.input :language, :collection => languages
+  = f.input :email
   = f.input :password
   = f.input :password_confirmation
   = f.input :administrator, :hide => :rights
@@ -10,11 +10,10 @@
 
 = field_set(:employee) do
   = f.input :employment
-  -# association :profession
   = f.referenced_association :team
   = f.referenced_association :establishment
 
--# = field_set(:rights) do
+= field_set(:access) do
   = f.referenced_association :role
   -# input :reduction_percent
   -# input :free_price
