--- a/app/themes/tekyla/stylesheets/mixins.css.scss
+++ b/app/themes/tekyla/stylesheets/mixins.css.scss
@@ -1,102 +1,9 @@
-@import "compass/reset";
 @import "compass/css3";
 @import "compass/utilities";
-@import "colors.css.scss";
-@import "font.css.scss";
-
-$symbiols: $icons;
-
-$fs-ratio: 1.2; // 1.618;
-$fs-normal: 13px;
-$fs-small:      ceil($fs-normal / $fs-ratio);
-$fs-large:     round($fs-ratio*$fs-normal);
-$fs-huge:      round($fs-ratio*$fs-large);
-$fs-very-huge: round($fs-ratio*$fs-huge);
-
-$lh-ratio: 1.4;
-$lh-small:     round($lh-ratio*$fs-small);
-$lh-normal:    round($lh-ratio*$fs-normal);
-$lh-large:     round($lh-ratio*$fs-large);
-$lh-huge:      round($lh-ratio*$fs-huge);
-$lh-very-huge: round($lh-ratio*$fs-very-huge);
-
-$fingertip-height: 32px !default;
-$fingertip-height: 2 * round($fingertip-height / 2);
-
-$base-color: #688ED8 !default;
-$neutral-color: #777 !default;
-$desktop-background: #F7F7F7 !default;
-$text-color: #333 !default;
-$invalid-color: #D81E08 !default;
-$caution-color: #FF8811 !default;
-$success-color: #65A907 !default;
-$important-color: $success-color !default;
-
-$hover-transparency: 0.85;
-$hover-mask: transparentize($base-color, $hover-transparency);
 
 @function background-hover($background-color) {
   @return mix($background-color, opacify($hover-mask, 1), percentage($hover-transparency));
 }
-
-
-$active-color: $base-color;
-$link-color:  darken($base-color, 27%);
-$link-color:  darken($base-color, 10%);
-$title-color: darken($base-color, 40%);
-$base-font-color:  $text-color;
-$base-font-reversed-color:  #FFF;
-
-$neutral-background: change-color($neutral-color, $lightness: 90%);
-$input-background: $desktop-background;
-$light-color: mix($base-color, $desktop-background, 50%); /* #C9D7F1 */
-$menu-background: #F0F0F0; /* #3D5C8D F1F1F1 86a5e0 c8d3e9*/
-$menu-background-hover: background-hover($menu-background);
-$menu-border-color: mix($menu-background, #000000, 87%);
-$menu-border-width: floor($fs-normal / 10);
-$menu-border: $menu-border-width solid $menu-border-color;
-$menu-width: $fs-normal * 13;
-$menu-padding: $menu-border-width;
-$menu-height:  $fingertip-height;
-$menu-text-height: 2 * round(1.4 * $fs-normal / 2);
-$input-border: $menu-border-width solid mix($desktop-background, $neutral-color, 60%);
-$label-width: 25%;
-
-$default-border-radius: round($fs-normal/5);
-/* Variation from center to  */
-$default-lightness-variation: 5%;
-$default-gap: round($fs-normal * 0.55);
-$cell-background: mix($desktop-background, $base-color, 82%);
-$cell-background-current: mix($desktop-background, $base-color, 62%);
-
-$buttons-names: (new create) (edit update) (destroy abort) (search) (confirm validate) (cancel) (lock) (unlock) (action reflect default) (up) (down) (left) (right) (configure) (column) (table) (duplicate) (point) (mark) (unmark) (true) (false) (page) (spreadsheet) (print) (filter) (mail) (nomail) (sort) (check) (divide) (load) (logout) (increment) (decrement) (close) (help) (merge) (spread) (rgreen) (rblue) (rblack) (nav) (general-informations) (genealogy) (group) (care) (treatment) (drug) (entity) (delay) (stock) (financial-asset) (animal) (vegetable) (document) (movement);
-$buttons-states: hover whited active disabled normal;
-$buttons-radius: $default-border-radius;
-
-$passive-bg: $menu-background;
-$active-bg: $base-color;
-
-$sans-font-family: 'Open Sans', 'Droid Sans', 'Liberation Sans', Helvetica, sans-serif !default;
-$base-font-family: $sans-font-family;
-
-$header-font-family: $base-font-family;
-$body-font-family: $base-font-family;
-$body-font-size: $fs-normal;
-$em-base: $fs-normal;
-$primary-color: $base-color;
-
-$topbar-height: $fingertip-height !default;
-
-$global-radius: $default-border-radius;
-$include-html-classes: false;
-
-
-$small-screen: 768px;
-$medium-screen: 1280px;
-$large-screen: 1440px;
-
-$mini-screen: 1024px;
-
 
 @function visible-color($background-color) {
   @if lightness($background-color) > 70% {
@@ -151,9 +58,9 @@ $mini-screen: 1024px;
 
 @mixin use-icon($name) {
   $i: 0;
-  @each $symbiol in $symbiols {
-    @if nth($symbiol, 1) == $name {
-      @include icon(nth($symbiol, 2));
+  @each $symbolic-icon in $symbolic-icons {
+    @if nth($symbolic-icon, 1) == $name {
+      @include icon(nth($symbolic-icon, 2));
       $i: $i + 1;
     }
   }
@@ -225,11 +132,9 @@ $mini-screen: 1024px;
   }
 }
 
-
 @mixin background-active-gradient {
   @include background(linear-gradient(top, lighten($active-color, $default-lightness-variation), $active-color, darken($active-color, $default-lightness-variation)));
 }
-
 
 @mixin title($font-size) {
   font-size: $font-size;
@@ -272,7 +177,7 @@ $mini-screen: 1024px;
   list-style-type: none;
   &:hover a {
     outline: none;
-    background: $menu-background-hover;
+    background: background-hover($menu-background);
     @include transition(background 0.2s, box-shadow 0.2s);
   }
   &.disabled, &[disabled] {
@@ -509,13 +414,3 @@ $mini-screen: 1024px;
   }
 
 }
-
-
-@import "active-list/minimal";
-@import "beehive.css.scss";
-@import "tables.css.scss";
-// @import "layout.css.scss";
-@import "buttons.css.scss";
-@import "check-boxes.css.scss";
-@import "active-list.css.scss";
-@import "main.css.scss";
