Adds dummy data generation for guides during runs with warning notification

--- a/app/views/backend/guides/_form.html.haml
+++ b/app/views/backend/guides/_form.html.haml
@@ -1,2 +1,9 @@
+= f.object.errors.inspect
 = field_set do
   = f.input :name
+  = f.input :active
+  = f.input :frequency
+  = f.input :external
+  = f.input :nature
+  = f.input :reference_name
+  = f.input :reference_source
