--- a/app/views/backend/guide_analyses/show.html.haml
+++ b/app/views/backend/guide_analyses/show.html.haml
@@ -1,9 +1,13 @@
 = beehive do |b|
   - b.cell do
     = attributes_list do |l|
+      - l.attribute :guide, url: true
       - l.attribute :execution_number
       - l.attribute :started_at
       - l.attribute :stopped_at
       - l.attribute :acceptance_status
 
   -# TODO Details results based on XML structure with points results
+  - b.cell :points do
+    = list :points
+ 
