--- a/app/views/backend/calculators/nitrogen_inputs/_form.html.haml
+++ b/app/views/backend/calculators/nitrogen_inputs/_form.html.haml
@@ -1,31 +1,6 @@
-= hidden_field_tag(:campaign_id, @campaign.id)
-.active-list
-  %table.list
-    %thead
-      %th= ProductionSupport.human_attribute_name(:activity)
-      %th= ProductionSupport.human_attribute_name(:campaign)
-      %th= LandParcel.model_name.human
-      %th= ProductionSupport.human_attribute_name(:net_surface_area)
-      %th= Production.human_attribute_name(:variant)
-      %th= :method.tl
-      %th= ProductionSupport.human_attribute_name(:yield)
-      %th= ProductionSupport.human_attribute_name(:soil_nature)
-      %th= ProductionSupport.human_attribute_name(:nitrogen_input)
-    %tbody
-      - for zone in @zones
-        %tr
-          %td= zone.activity.name
-          %td= zone.campaign.name
-          %td= zone.land_parcel.name
-          %td.dec= zone.net_surface_area.in(:hectare).round(3).l
-          %td= zone.cultivation_variety.human_name
-          %td= select_tag("zones[#{zone.id}][inputs_method]", options_for_select(Nomen::NmpMethods.selection, zone.inputs_method))
-          %td
-            %span.input-append
-              - y = zone.crop_yield
-              = text_field_tag("zones[#{zone.id}][crop_yield][value]", (y.zero? ? "" : y.to_d), size: 4)
-              %span.add-on
-                = hidden_field_tag("zones[#{zone.id}][crop_yield][unit]", y.unit)
-                = y.symbol
-          %td= select_tag("zones[#{zone.id}][soil_variety]", options_for_select(Nomen::Varieties.selection(:land_parcel), zone.soil_variety.name))
-          %td.dec= zone.nitrogen_inputs.in(:unity_per_hectare).l
+- if @campaign
+  = render "zones"
+- else
+  .proposal-list
+    - for campaign in Campaign.currents
+      = link_to(campaign.name, {campaign_id: campaign.id}, class: "btn")
