--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -11,12 +11,11 @@
       - l.attribute :campaign
       - l.attribute :activity
 
-  - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:milk])
-    - b.tabbox do
+  - b.hbox do
+    - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:milk])
       - b.cell :last_milk_result, :params => {campaign_id: @production.campaign_id}
 
-  - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
-    - b.tabbox do
+    - elsif Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
       - b.cell :map do
         %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableZone.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
           -CultivableZone.of_production(@production).find_each do |cultivable_zone|
@@ -41,11 +40,11 @@
           = pie_chart(series, tooltip: {point_format: '{point.y: 1.3f} Ha'}, title: {text: (@production.area.in_hectare.round(3)).to_s}, plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: true}}, legend: {})
         - else
           = no_data
+      - b.cell(:supports) do
+        = list(:supports)
 
-  - b.tabbox do
+  - b.hbox do
     - b.cell(:interventions) do
       = list(:interventions)
-    - b.cell(:supports) do
-      = list(:supports)
-    - b.cell(:markers) do
+    -#  b.cell(:markers) do
       = list(:markers)
