--- a/app/views/backend/cultivable_zones/show.html.haml
+++ b/app/views/backend/cultivable_zones/show.html.haml
@@ -2,7 +2,7 @@
   - t.edit @cultivable_zone
 
 = beehive do |b|
-  - b.tabbox do
+  - b.hbox do
     - b.cell :general do
       .picture
         = @cultivable_zone.shape_svg(:width => 180, :height => 180, :class => :map)
@@ -10,16 +10,15 @@
         %span.title= CultivableZone.human_attribute_name(:net_surface_area)
         %span.value= @cultivable_zone.net_surface_area.in_hectare.round(2).l
 
-    - b.cell do
-      = attributes_list do |l|
-        - l.attribute :name
+    - b.cell :meteo, params: {id: resource.id}
 
-  - b.tabbox do
-    - b.cell(:contained_products) do
-      = list(:contained_products)
-    - b.cell(:productions) do
-      = list(:productions)
+  - b.hbox do
     - b.cell(:markers) do
       = list(:markers)
-    - b.cell(:interventions) do
+    - b.cell(:productions) do
+      = list(:productions)
+  - b.hbox do
+    - b.cell(:contained_products) do
+      = list(:contained_products)
+    - b.cell(:intervention_casts) do
       = list(:intervention_casts)
