--- a/app/views/backend/journals/balance.html.haml
+++ b/app/views/backend/journals/balance.html.haml
@@ -7,7 +7,7 @@
     %label= tc(:centralize)
     = text_field_tag("centralize", params[:centralize]||centralized, :size=>30)
   - k.criterion do
-    - max = Account.maximum(Account.connection.length("COALESCE(number, '')")).to_i
+    - max = Account.maximum("LENGTH(TRIM(number))").to_i
     %label= tc(:subtotals_at_level)
     - for level in 1..max-1
       - name = "level_#{level}"
