update method for escaping fallow land and fix some bug.

--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -6,6 +6,7 @@
     = f.referenced_association :production_support
     = f.referenced_association :issue
     = f.input :recommended, show: :prescriptions
+    = f.input :provisional
     -#= f.referenced_association :production
     = f.input :started_at
     = f.input :stopped_at
