fix bug on stocks

--- a/app/views/backend/dashboards/stocks.html.haml
+++ b/app/views/backend/dashboards/stocks.html.haml
@@ -3,8 +3,8 @@
     - cell :last_outgoing_deliveries
     - cell :last_incoming_deliveries
   - hbox do
-    - cell :current_stocks_by_product_nature, :params => {variety: 'chemical_fertiliser', mass_unit: 'ton'}
-    - cell :current_stocks_by_product_nature, :params => {variety: 'manure', mass_unit: 'ton'}
+    - cell :current_stocks_by_product_nature, :params => {variety: 'chemical_fertilizer', mass_unit: 'ton'}
+    - cell :current_stocks_by_product_nature, :params => {variety: 'excrement', mass_unit: 'ton'}
     -# cell :current_stocks_by_product_nature, :params => {variety: 'grain', mass_unit: 'quintal'}
   - hbox do
     - cell :current_stocks_by_product_nature, :params => {variety: 'animal_medicine'}
