--- a/app/views/backend/animal_groups/show.html.haml
+++ b/app/views/backend/animal_groups/show.html.haml
@@ -1,13 +1,13 @@
-=main_toolbar do |t|
-  -t.edit @animal_group
-  -t.destroy(@animal_group, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_group.destroyable?
+= main_toolbar do |t|
+  - t.edit @animal_group
+  - t.destroy(@animal_group, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_group.destroyable?
 
-=beehive do |b|
-  -b.cell do
+= beehive do |b|
+  - b.cell do
     = attributes_list do |l|
       - l.attribute :name
-  -b.tabbox do
-    -b.cell(:animals) do
-      =list(:animals)
-    -b.cell(:places) do
-      =list(:places)
+  - b.hbox do
+    - b.cell(:animals) do
+      = list(:animals)
+    - b.cell(:places) do
+      = list(:places)
