--- a/app/views/backend/equipments/show.html.haml
+++ b/app/views/backend/equipments/show.html.haml
@@ -1,20 +1,33 @@
-=main_toolbar do |t|
-  -t.edit resource
+= main_toolbar do |t|
+  - t.edit resource
 
 = beehive do |b|
-  - b.tabbox do
+  - b.hbox do
     - b.cell :general do
+      - if resource.picture.exists?
+        = image_tag(resource.picture.url(:thumb))
+      - if resource.container
+        .info
+          %span.title= Product.human_attribute_name :container
+          %span.value= resource.container.name
+      - if resource.default_storage
+        .info
+          %span.title= Product.human_attribute_name :default_storage
+          %span.value= resource.default_storage.name
+
+    - b.cell :details do
       = attributes_list(resource) do |l|
         - l.attribute :name
         - l.attribute :nature
         - l.attribute :variety
         = image_tag(resource.picture.url(:thumb)) if resource.picture.file?
 
-  - b.tabbox do
+  - b.hbox do
     - b.cell(:intervention_casts) do
       = list(:intervention_casts)
     - b.cell(:places) do
       = list(:places)
+  - b.hbox do
     - if resource.linkage_points.any?
       - b.cell(:carried_linkages) do
         = list(:carried_linkages)
