--- a/app/views/backend/dashboards/stocks.html.haml
+++ b/app/views/backend/dashboards/stocks.html.haml
@@ -3,9 +3,13 @@
     - cell :last_outgoing_deliveries
     - cell :last_incoming_deliveries
   - hbox do
-    - cell :current_stocks_by_product_nature, :params => {variety: 'chemical_fertilizer', mass_unit: 'ton'}
-    - cell :current_stocks_by_product_nature, :params => {variety: 'excrement', mass_unit: 'ton'}
-    -# cell :current_stocks_by_product_nature, :params => {variety: 'grain', mass_unit: 'quintal'}
+    - if Product.of_variety('chemical_fertilizer').collect(&:net_mass).sum > 0.in_gram
+      - cell :current_stocks_by_product_nature, params: {variety: 'chemical_fertilizer', unit: 'ton'}
+    - if Product.of_variety('excrement').collect(&:net_mass).sum > 0.in_gram
+      - cell :current_stocks_by_product_nature, params: {variety: 'excrement', unit: 'ton'}
+    -# cell :current_stocks_by_product_nature, params: {variety: 'grain', mass_unit: 'quintal'}
   - hbox do
-    - cell :current_stocks_by_product_nature, :params => {variety: 'animal_medicine'}
-    - cell :current_stocks_by_product_nature, :params => {variety: 'plant_medicine'}
+    - if Product.of_variety('animal_medicine').collect(&:net_mass).sum > 0.in_gram
+      - cell :current_stocks_by_product_nature, params: {variety: 'animal_medicine'}
+    - if Product.of_variety('plant_medicine').collect(&:net_mass).sum > 0.in_gram
+      - cell :current_stocks_by_product_nature, params: {variety: 'plant_medicine'}
