--- a/app/views/backend/cells/current_stocks_by_product_nature_cells/show.html.haml
+++ b/app/views/backend/cells/current_stocks_by_product_nature_cells/show.html.haml
@@ -1,26 +1,31 @@
-- if @variety and @mass_unit
+- if @variety and @indicator
   :ruby
     #
     series = []
     categories = {}
-    mass_unit = Nomen::Units[@mass_unit]
+    unit = Nomen::Units[@unit]
     product_natures = ProductNature.stockables.of_variety(@variety.to_s).reorder(:id)
+    method = @indicator.name.to_sym
 
     if product_natures.any?
       product_natures_serie = product_natures.collect do |product_nature|
-        { name: product_nature.name, y: product_nature.products.map(&:net_mass).compact.sum.in(mass_unit).to_f, id: product_nature.id, url: backend_product_nature_path(product_nature), color: cycle(*Backend::ChartsHelper::COLORS) }
+        count = product_nature.products.map(&method).compact.sum
+        count = count.in(unit) if unit
+        { name: product_nature.name, y: count.to_f, id: product_nature.id, url: backend_product_nature_path(product_nature), color: cycle(*Backend::ChartsHelper::COLORS) }
       end
       product_nature_variants_serie = ProductNatureVariant.of_natures(product_natures).order("nature_id, id").collect do |product_nature_variant|
-        { name: product_nature_variant.name, y: product_nature_variant.products.map(&:net_mass).compact.sum.in(mass_unit).to_f, url: backend_product_nature_variant_path(product_nature_variant), color: ligthen(product_natures_serie.detect{|a| a[:id] == product_nature_variant.nature_id}[:color], 0.3) }
+        count =  product_nature_variant.products.map(&method).compact.sum
+        count = count.in(unit) if unit
+        { name: product_nature_variant.name, y: count.to_f, url: backend_product_nature_variant_path(product_nature_variant), color: ligthen(product_natures_serie.detect{|a| a[:id] == product_nature_variant.nature_id}[:color], 0.3) }
       end
 
-      series << {name: ProductNature.model_name.human, data: product_natures_serie, size: "60%", data_labels: {color: 'white', distance: -30}}
-      series << {name: ProductNatureVariant.model_name.human, data: product_nature_variants_serie, size: "80%", inner_size: "60%"}
+      series << {name: ProductNature.model_name.human, data: product_natures_serie.delete_if{|v| v[:y].zero? }, size: "60%", data_labels: {color: 'white', distance: -30}}
+      series << {name: ProductNatureVariant.model_name.human, data: product_nature_variants_serie.delete_if{|v| v[:y].zero? }, size: "80%", inner_size: "60%"}
     end
-  - if series.empty? or product_natures_serie.collect{|h| h[:y]}.sum.zero? or product_nature_variants_serie.collect{|h| h[:y]}.sum.zero?
+  - if series.empty? or product_natures_serie.collect{|h| h[:y]}.sum <= 0 or product_nature_variants_serie.collect{|h| h[:y]}.sum <= 0
     = no_data
   - else
-    = pie_chart(series, tooltip: {point_format: "{point.y: 1.2f} #{mass_unit.symbol}"}, title: :stock_of_x.tl(x: Nomen::Varieties[@variety].human_name), plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: false}}, legend: {})
+    = pie_chart(series, tooltip: {point_format: "{point.y: 1.2f}#{' ' + unit.symbol.to_s if unit}"}, title: :stock_of_x.tl(x: Nomen::Varieties[@variety].human_name), plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: false}}, legend: {})
 
 - else
   = no_data
