--- a/app/views/backend/plants/show.html.haml
+++ b/app/views/backend/plants/show.html.haml
@@ -9,6 +9,9 @@
         = image_tag(@plant.picture.url(:identity))
       - else
         = @plant.shape_svg(width: 180, height: 180, :class => :map)
+    .info
+      %span.title= Plant.human_attribute_name(:net_surface_area)
+      %span.value= @plant.net_surface_area.in_hectare.round(2).l
     = attributes_list do |l| # liste des champs à afficher
       - l.attribute :name
       - l.attribute :born_at
