Adds new attribute "need" in procedure to specify if we need to ask for population, shape or both of them

--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -24,7 +24,7 @@
       = v.input :reference_name, as: :hidden
       - if reference.new?
         = v.input("actor", :wrapper => :append, :value => 0, wrapper_html: {class: "inline special"}, label: reference.human_name) do
-          - if reference.parted?
+          - if reference.need_population?
             = v.input_field :population
           - if reference.known_variant?
             %span.add-on= reference.variant_indication
