--- a/app/views/backend/building_divisions/show.html.haml
+++ b/app/views/backend/building_divisions/show.html.haml
@@ -1,18 +1,18 @@
-=main_toolbar do |t|
-  -t.edit @building_division
+= main_toolbar do |t|
+  - t.edit resource
 
-=beehive do |b|
-  -b.tabbox do
-    -b.cell :general do
+= beehive do |b|
+  - b.hbox do
+    - b.cell :general do
+      - if resource.shape
+        .picture
+          = resource.shape_svg(:width => 180, :height => 180, :class => :map)
       = attributes_list do |l|
         - l.attribute :name
         - l.attribute :variant, url: true
         - l.attribute :nature, url: true
         - l.attribute :work_number
-    -b.cell do
-      .picture
-        =@building_division.shape_svg(:width => 180, :height => 180, :class => :map)
 
-  -b.tabbox do
-    -b.cell(:content_products) do
-      =list(:contained_products)
+  - b.hbox do
+    - b.cell(:contained_products) do
+      = list(:contained_products)
