--- a/app/views/backend/productions/_marker_fields.html.haml
+++ b/app/views/backend/productions/_marker_fields.html.haml
@@ -1,8 +1,8 @@
 .nested-fields
-  =link_to_remove_nested_association(:marker, f)
-  = f.input(:indicator_name, :wrapper_html => {:id => 'indicator-field'})
-  = f.input(:indicator_datatype, :wrapper_html => {:id => 'indicator_datatype-field'})
-  = f.input(:value, :wrapper_html => {:id => 'measure_value-field'})
-  = f.input(:aim, :wrapper_html => {:id => 'aim-field'})
-  = f.input(:subject, :wrapper_html => {:id => 'subject-field'})
-  = f.input(:derivative, :wrapper_html => {:id => 'derivative-field'})
+  = link_to_remove_nested_association(:marker, f)
+  = f.input(:indicator_name)
+  -# = f.input(:indicator_datatype)
+  -# = f.input(:value)
+  = f.input(:aim, as: :radio_buttons)
+  = f.input(:subject, as: :radio_buttons)
+  = f.input(:derivative)
