Fixes first_run bugs due to indicators

--- a/app/views/backend/product_nature_variants/_indicator_datum_fields.html.haml
+++ b/app/views/backend/product_nature_variants/_indicator_datum_fields.html.haml
@@ -14,4 +14,4 @@
     - else
       = f.input_field("#{indicator.datatype}_value", label: indicator.human_name, as: :string)
     - if !f.object.new_record? and f.object.indicator_name_population?
-      %span.add-on= self.unit_name
+      %span.add-on= f.object.variant.unit_name
