Fixes bug on animals changes

--- a/app/views/backend/animals/_form.html.haml
+++ b/app/views/backend/animals/_form.html.haml
@@ -6,5 +6,5 @@
     = f.input :description
 
   = field_set(:genealogy) do
-    = f.referenced_association :mother, :source => :mothers
-    = f.referenced_association :father, :source => :fathers
+    = f.referenced_association :initial_mother, :source => :mothers
+    = f.referenced_association :initial_father, :source => :fathers
