--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -6,7 +6,7 @@
   - t.destroy(@animal, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal.destroyable?
 
 = beehive do |b|
-  - b.tabbox do
+  - b.hbox do
     - b.cell :general do
       - if @animal.picture.exists?
         .picture= image_tag(@animal.picture.url(:identity))
@@ -54,18 +54,29 @@
         .info
           %span.title= Animal.human_attribute_name(:container)
           %span.value= link_to(container.name, backend_product_path(container))
-    - b.cell :details do
-      = attributes_list do |l| # liste des champs à afficher
-        - l.attribute :name
-        - l.attribute :variety, url: true
-        - l.attribute :born_at
-        - l.attribute :dead_at
-        - l.attribute :sex, :through => :indicator_data
-        - l.attribute :mother, url: true
-        - l.attribute :father, url: true
-        - l.attribute :identification_number
-        - l.attribute :description
-    - b.cell :indicators_evolutions do
+    - b.cell(:variable_indicators) do
+      :ruby
+        indicators = resource.variable_indicators.delete_if{|i| ![:measure, :decimal].include?(i.datatype)}
+        series = []
+        now, window = Time.now, 1.year
+        min = (resource.born_at ? resource.born_at : now - window)
+        min = now - window if (now - min) < window
+        for indicator in indicators # [:population, :nitrogen_concentration].collect{|i| Nomen::Indicators[i] }
+          items = ProductIndicatorDatum.where(indicator_name: indicator.name, product: resource).where("? < measured_at AND measured_at < ?", min, now).order(:measured_at)
+          next unless items.any?
+          data = []
+          data << [min.to_usec, resource.get(indicator, at: min).to_f.to_s.to_f]
+          data += items.inject({}) do |hash, pair|
+            hash[pair.measured_at.to_usec] = pair.value.to_d
+            hash
+          end.collect{|k,v| [k, v.to_s.to_f] }
+          data << [now.to_usec, resource.get(indicator, at: now).to_f.to_s.to_f]
+          series << {name: indicator.human_name, data: data}
+        end
+
+      = spline_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom'}, y_axis: {title: { text: :indicator.tl}}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}, min: min.to_usec})
+
+    -# b.cell :indicators_evolutions do
       - if @animal.born_at
         :ruby
           #
@@ -117,16 +128,29 @@
         = no_data
 
 
-  - b.tabbox do
+  - b.hbox do
 
+    - b.cell :details do
+      = attributes_list do |l| # liste des champs à afficher
+        - l.attribute :name
+        - l.attribute :variety, url: true
+        - l.attribute :born_at
+        - l.attribute :dead_at
+        - l.attribute :sex, :through => :indicator_data
+        - l.attribute :mother, url: true
+        - l.attribute :father, url: true
+        - l.attribute :identification_number
+        - l.attribute :description
     - b.cell(:children) do
       = list(:children)
+
+  - b.hbox do
     - b.cell(:places) do
       = list(:places)
     - b.cell(:groups) do
       = list(:groups)
 
-  - b.tabbox do
+  - b.hbox do
     - b.cell(:issues) do
       = toolbar do |t|
         - t.new(:params =>{:controller => :issues, :target_id => @animal.id, :target_type => @animal.class.name})
